= Version 0.8.0

  * [FEATURE] AMQP 0.9.1 support, including tx.* operations class.
  * [API] Default authentication handler now raises AMQP::PossibleAuthenticationFailureError
  * [API] AMQP::Channel#initialize now takes 3rd (optional) options hash.
  * [API] Broker connection class is now AMQP::Session.
  * [API] AMQP::Error instance now may carry cause, an exception that caused exception in question to be raised.
  * [API] When initial TCP connection fails, default action is now to raise AMQP::TCPConnectionFailed.
  * [API] AMQP::BasicClient#reconnect now takes 2nd optional argument, period of waiting in seconds.
  * [FEATURE] Handlers for initial connection failure, connection loss; channel-level exceptions handlers on Channel instances.
  * [API] AMQP::Exchange#initialize now accepts :arguments option that takes a hash.
  * [API] AMQP::Queue#initialize now accepts :arguments option that takes a hash.
  * [API] AMQP#Logger is deprecated. It will be removed before 1.0 release.
  * [API] AMQP#fork is deprecated. It will be removed before 1.0 release.
  * [API] AMQP::RPC is deprecated. It will be removed before 1.0 release.
  * [FEATURE] Significant improvements to the documentation. From now on lack of/poor documentation is considered a severe bug.
  * [FEATURE] Support for RabbitMQ extensions to AMQP 0.9.1
  * [API] AMQP::Exchange#publish now accepts (an optional) callback.
  * [API] AMQP::Channel.new now accepts (an optional) callback.
  * [API] AMQP::Header#ack now can acknowledge multiple deliveries
  * [API] AMQP::Exchange#delete now takes (an optional) block that is called when exchange.delete-ok response arrives.
  * [API] AMQP::Header now implements #to_hash
  * [API] AMQP::Queue#pop block now can take 1, 2 or 3 arguments.
  * [API] AMQP::Queue#purge  now takes an optional block which is called when queue.purge-ok response arrives.
  * [API] AMQP::Queue#delete now takes an optional block which is called when queue.delete-ok response arrives.